Fix overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,6 +23,8 @@ body {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
 }
 
 #__next {
@@ -31,9 +33,11 @@ body {
   line-height: $font-height;
   color: $dark-grey;
   overflow-x: hidden;
-  overflow-y: clip;
+  overflow-y: auto;
   background-color: $orange-light;
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 mark {
